          int32_t (*compile_spvm)(SPVM_ENV* env, void* compiler, const char* class_name);
          void (*free_compiler)(SPVM_ENV* env, void* compiler);
          int32_t (*init_env)(SPVM_ENV* env);
          void (*call_init_blocks)(SPVM_ENV* env);
          void (*cleanup_global_vars)(SPVM_ENV* env);
          
        [BUG FIX]
        * Fix the line and the position of character in case that a compilation error occurs and some space character exists.
        [NON BACKWORD COMPATIBLE CHANGES]
        * The "free_env" native API don't cleanup global variables such as the exception variable and class variables
          because the process of envs and compilers must be separated
        * The "new_env" native API create an uninitialized environment.
0.9505  2021-02-16
        [CHANGE]
        * Improve the error message of getting and setting fields.
        * Detect the change of the SPVM core precompile source code in precompile.
        * Precompile methods is fallbacked to non-precompile methods
        * Add interface feature
        * spvmgenlib command generate main method instead of sum and print "Hello World!"
        * Add Cloneable module.
        [BUG FIX]
        * Fix bug that is_read_only doesn't set condition flag.
        * Fix bug that $self->set_x($self->x) become compile error.
        
        [NON BACKWORD COMPATIBLE CHANGES]
        * spvmgenlib command doesn't generate native module by default
          --native-language option is needed.
          [Before]
          spvmgenlib MyLib
          [After]
          spvmgenlib MyLib --native-language c
        
0.9504  2021-02-10
        [CHANGE]
        * Add the make_read_only native API.
        * Add the is_read_only native API.
        * Add make_read_only statement.
        * Add is_read_only operator.
        * The string created by string literal become read-only.
        * Read-only string can't be converted to mutable string.
        * The key of Hash module become read-only string.